--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,51 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+.main_div{
+  width: 100%;
+  height: 100%;
+  background: #6983aa;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+  display: none;
+    
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+.center_div{
+    width: 25%;
+    height: 80vh;
+    background-color: #111010;
+    box-shadow: 5px 5px 25px -5px rgba(0,0,0, 0.5);
+    border-radius: 15px;
+    display: none;
+}
+h1{
+    color: white;
+    background: transparent;
+    background-color: #0f1ef8;
+    padding: 6px 0 2px 0;
+    margin-bottom: 10px;
+    
+}
+button:hover{
+  background-color: #20bf6b;
+}
+ol{
+  margin-top: 30px;
+}
+ol li{
+  padding-left: 0px;
+  text-align: left;
+  font-size: 20px;
+  font-weight: 500;
+  min-height: 40px;
+  display: flex;
+  align-items: center;
+  color: #8566aa;
+  text-transform: capitalize;  
+}
+@media(max-width: 720px){
+  .center_div{
+      width: 55%;
+  }
 }
